--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ crashlytics-build.properties
 /Assets/Fantasy Skybox FREE
 /Assets/FantasyEnvironments
 /Assets/TerrainSampleAssets
+/Assets/Meanwhile On The Moon
