制作背包，拾取，储存获取等功能

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ crashlytics-build.properties
 /Assets/FantasyEnvironments
 /Assets/TerrainSampleAssets
 /Assets/Meanwhile On The Moon
+/Assets/GUI_Parts
+/Assets/karsiori
